--- a/config.toml
+++ b/config.toml
@@ -5,27 +5,65 @@ contentdir = "content"
 languageCode = "en-US"
 layoutdir = "layouts"
 publishdir = "public"
+theme               = "cocoa"
 author = "Khoi Lai"
 title = "Khoi Lai"
-disqusShortname = "khoiln" # Comment out to disable Disqus.
+pygmentsuseclasses  = true
+disqusshortname     = "khoiln" 
 pluralizelisttitles = false
+googleAnalytics     = "UA-55953295-6"
 
 [permalinks]
-fixed = ":title/"
-blog = "blog/:slug/"
+blog = "post/:slug/"
+
+[[menu.main]]
+name                   = "Posts"
+weight                 = -120
+identifier             = "post"
+url                    = "/"
+
+[[menu.main]]
+name                   = "About"
+weight                 = -110
+identifier             = "about"
+url                    = "/about/"
 
 [params]
-Author = "Khoi Lai"
-CacheBuster = true
-DateForm = "Jan 2, 2006"
-DateFormFull = "Mon Jan 2 2006 15:04:05 MST"
-Description = "Can't think of any good bio"
-Email = "khoi.geeky@gmail.com"
-GATracker = "UA-55953295-6"
-GitHub = "//github.com/khoiln"
-HighlightJS = true
-Initials = "ad" # Displayed on single post page; DEPRECATED in v0.3.0.
-Lang = "en"
-LinkedIn = "//linkedin.com/in/khoilai"
-Twitter = "//twitter.com/khoigeeky"
-ExtraCssFiles = [ "/css/override.css" ] # In your `static/css`, add/remove files as necessary.
+latestpostscount       = 5                             # how many posts to display on the home page
+i18n_flags             = false                         # whether to display small country flags for available translations
+author                 = "Khoi Lai"
+cachebuster            = true                          # add the current unix timestamp in query string for cache busting css assets
+dateform               = "Jan 2, 2006"
+dateformfull           = "Mon Jan 2 2006 15:04:05 MST"
+description            = ""
+email                  = "khoi.geeky@gmail.com"
+extracssfiles          = [ "/css/override.css" ]       # In your `static` directory, add/remove files as necessary.
+faviconfile            = "img/leaf.ico"
+github                 = "//github.com/khoiln"
+# instagram              = "//instagram.com/you"
+# px500                  = "//500px.com/username"
+lang                   = "en"
+# linkedin               = "//linkedin.com/in/you"
+noshowreadtime         = true                         # if true, don't show "<x> minutes read" in posts
+selfintro              = ""                            # appears in the site header when set to a non-empty string
+twitter                = "//twitter.com/khoigeeky"
+# mastodon               = "//example.com/@you"
+
+highlightjs            = true
+# highlightjslanguages = ["go"]                        # additional languages not included in the "common" set
+# highlightjsStyle     = "darcula"
+
+piwik                  = false                         # If true, Piwik integration is enabled
+# piwik_url            = "//www.example.com/piwik/"    # URL to your Piwik installation. Must End with a slash
+# piwik_id             = 2                             # Id of your site in Piwik
+
+gitalk                 = false
+# if gitalk is true, the following params should be set. These parameters could be retrieved from github OAuth
+gitalk_clientID        = "your client id"
+gitalk_clientSecret    = "your client secret"
+gitalk_repo            = "your repo url"
+gitalk_owner           = "the owner of this repo"
+gitalk_admin           = ['a', 'list', 'of', 'administrator']
+
+# avatar                 = "img/profile.png" # path to image in static dir e.g img/avatar.png (do not use in the same time as gravatar)
+gravatar             = "ee10907795c65aee74b1e62c9818cbec"                # gravatar hash. see https://en.gravatar.com/site/implement/hash/. do not use in the same time as avatar
