--- a/config.toml
+++ b/config.toml
@@ -26,7 +26,7 @@ url                    = "/"
 name                   = "About"
 weight                 = -110
 identifier             = "about"
-url                    = "/about/"
+url                    = "/fixed/about/"
 
 [params]
 latestpostscount       = 5                             # how many posts to display on the home page
