--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       - checkout
       - run: git submodule update --init --recursive --remote
       - run: HUGO_ENV=production hugo -t cocoa
-      - run: git config --global user.email "khoi.geeky@gmail.com"
+      - run: git config --global user.email "khoiracle@gmail.com"
       - run: git config --global user.name "Khoi Lai"
       - add_ssh_keys
       - deploy: 
