Update github url

--- a/config.toml
+++ b/config.toml
@@ -39,7 +39,7 @@ description            = ""
 email                  = "khoi.geeky@gmail.com"
 extracssfiles          = [ "/css/override.css" ]       # In your `static` directory, add/remove files as necessary.
 faviconfile            = "img/leaf.ico"
-github                 = "//github.com/khoiln"
+github                 = "//github.com/khoi"
 # instagram              = "//instagram.com/you"
 # px500                  = "//500px.com/username"
 lang                   = "en"
