--- a/config.toml
+++ b/config.toml
@@ -36,7 +36,7 @@ cachebuster            = true                          # add the current unix ti
 dateform               = "Jan 2, 2006"
 dateformfull           = "Mon Jan 2 2006 15:04:05 MST"
 description            = ""
-email                  = "khoi.geeky@gmail.com"
+email                  = "k@khoi.io"
 extracssfiles          = [ "/css/override.css" ]       # In your `static` directory, add/remove files as necessary.
 faviconfile            = "img/leaf.ico"
 github                 = "//github.com/khoi"
