--- a/config.toml
+++ b/config.toml
@@ -6,8 +6,8 @@ languageCode = "en-US"
 layoutdir = "layouts"
 publishdir = "public"
 theme               = "cocoa"
-author = "Khoi Lai"
-title = "Khoi Lai"
+author = "Khoi"
+title = "Khoi"
 pygmentsuseclasses  = true
 disqusshortname     = "khoiln" 
 pluralizelisttitles = false
@@ -31,7 +31,7 @@ url                    = "/fixed/about/"
 [params]
 latestpostscount       = 5                             # how many posts to display on the home page
 i18n_flags             = false                         # whether to display small country flags for available translations
-author                 = "Khoi Lai"
+author                 = "Khoi"
 cachebuster            = true                          # add the current unix timestamp in query string for cache busting css assets
 dateform               = "Jan 2, 2006"
 dateformfull           = "Mon Jan 2 2006 15:04:05 MST"
