--- a/config.toml
+++ b/config.toml
@@ -1,69 +1,12 @@
-baseurl = "https://www.khoi.io/"
-builddrafts = false
-canonifyurls = true
-contentdir = "content"
-languageCode = "en-US"
-layoutdir = "layouts"
-publishdir = "public"
-theme               = "cocoa"
-author = "Khoi"
-title = "Khoi"
-pygmentsuseclasses  = true
-disqusshortname     = "khoiln" 
-pluralizelisttitles = false
-googleAnalytics     = "UA-55953295-6"
+baseURL = "https://khoi.io/"
+languageCode = "en-us"
+title = "khoi.io"
+theme = "kondo"
+DefaultContentLanguage = "en"
 
-[permalinks]
-blog = "post/:slug/"
-
-[[menu.main]]
-name                   = "Posts"
-weight                 = -120
-identifier             = "post"
-url                    = "/"
-
-[[menu.main]]
-name                   = "About"
-weight                 = -110
-identifier             = "about"
-url                    = "/fixed/about/"
+[author]
+  name = "khoi"
+  homepage = "https://khoi.io/"
 
 [params]
-latestpostscount       = 5                             # how many posts to display on the home page
-i18n_flags             = false                         # whether to display small country flags for available translations
-author                 = "Khoi"
-cachebuster            = true                          # add the current unix timestamp in query string for cache busting css assets
-dateform               = "Jan 2, 2006"
-dateformfull           = "Mon Jan 2 2006 15:04:05 MST"
-description            = ""
-email                  = "k@khoi.io"
-extracssfiles          = [ "/css/override.css" ]       # In your `static` directory, add/remove files as necessary.
-faviconfile            = "img/leaf.ico"
-github                 = "//github.com/khoi"
-# instagram              = "//instagram.com/you"
-# px500                  = "//500px.com/username"
-lang                   = "en"
-# linkedin               = "//linkedin.com/in/you"
-noshowreadtime         = true                         # if true, don't show "<x> minutes read" in posts
-selfintro              = ""                            # appears in the site header when set to a non-empty string
-twitter                = "//twitter.com/khoiracle"
-# mastodon               = "//example.com/@you"
-
-highlightjs            = true
-# highlightjslanguages = ["go"]                        # additional languages not included in the "common" set
-# highlightjsStyle     = "darcula"
-
-piwik                  = false                         # If true, Piwik integration is enabled
-# piwik_url            = "//www.example.com/piwik/"    # URL to your Piwik installation. Must End with a slash
-# piwik_id             = 2                             # Id of your site in Piwik
-
-gitalk                 = false
-# if gitalk is true, the following params should be set. These parameters could be retrieved from github OAuth
-gitalk_clientID        = "your client id"
-gitalk_clientSecret    = "your client secret"
-gitalk_repo            = "your repo url"
-gitalk_owner           = "the owner of this repo"
-gitalk_admin           = ['a', 'list', 'of', 'administrator']
-
-# avatar                 = "img/profile.png" # path to image in static dir e.g img/avatar.png (do not use in the same time as gravatar)
-gravatar             = "d7fa7d4e2c83eeb4be2ecfbdd9c4d6e7"                # gravatar hash. see https://en.gravatar.com/site/implement/hash/. do not use in the same time as avatar
+  description = "khoi's random thoughts"
