rename theme to khoi since it's not ready to be used publicly

--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "https://khoi.io/"
 languageCode = "en-us"
 title = "khoi.io"
-theme = "kondo"
+theme = "khoi"
 DefaultContentLanguage = "en"
 
 # pygmentsStyle = "dracula"
